# deptry-ci-no-virtualenv-example

./: README.md  pyproject.toml
.github/workflows/: main.yml
bar/: foo.py
