[tool.poetry]
name = "deptry-ci-no-virtualenv"
version = "0.0.1"
description = "An example"
authors = ["Florian Maas <fpgmaas@gmail.com>"]
repository = "https://github.com/fpgmaas/deptry"
documentation = "https://fpgmaas.github.io/deptry/"
readme = "README.md"
license = "MIT"
packages = [
    { include = "bar" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.24.3"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
deptry = "^0.10.0"

[tool.deptry]
# Ignore, because pre-installed.
ignore_missing = ["pytorch"]